LPS-110783 portal-search-web: gradlew buildLang

--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_ar.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=اسم معلمة دلتا لتقسيم الصف
 pagination-start-parameter-name=اسم معلمة بدء تقسيم الصفحات
 parent-query-name=اسم الاستعلام الرئيسي
 parent-query-name-help=اسم الاستعلام المكوّن في عنصر واجهة المستخدم لعامل التصفية المخصص الرئسي، فقط عندما يكون المقصود من عنصر واجهة المستخدم هذا المساهمة بفقرة فرعية في استعلام قيمة منطقية. خلاف ذلك يجب تركه فارغًا.
+portlet-display-template-description-custom-filter-compact=عرض حقل الإدخال مضمنًا مع زر الإرسال. (Automatic Translation)
+portlet-display-template-description-facet-cloud=عرض المصطلحات كقائمة مضمنة من الارتباطات ذات الأحجام المختلفة استنادًا إلى التكرار. (Automatic Translation)
+portlet-display-template-description-facet-compact=عرض المصطلحات كقائمة من الارتباطات. (Automatic Translation)
+portlet-display-template-description-facet-label=عرض المصطلحات كقائمة مضمنة من التسميات. (Automatic Translation)
+portlet-display-template-description-facet-radio=عرض المصطلحات باستخدام أزرار الاختيار. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=عرض رمز البحث على اليسار. (Automatic Translation)
+portlet-display-template-description-search-results-card=عرض النتائج باستخدام شبكة من البطاقات. (Automatic Translation)
+portlet-display-template-description-search-results-compact=عرض النتائج مع عنوانها فقط. (Automatic Translation)
+portlet-display-template-description-search-results-list=عرض النتائج مع العنوان واسم المستخدم منشئ، نوع الأصول وتاريخ الإنشاء. (Automatic Translation)
+portlet-display-template-description-sort-compact=عرض التسمية مضمنة مع القائمة المنسدلة. (Automatic Translation)
 portlet-display-template-name-card-layout=مخطط البطاقة
 portlet-display-template-name-cloud-layout=مخطط السحابة
 portlet-display-template-name-compact-layout=مخطط مضغوط
