--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_bg.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Показване на въведеното поле с бутона за подаване. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Показвайте термините като вмъкнат списък с връзки с различни размери въз основа на честотата. (Automatic Translation)
+portlet-display-template-description-facet-compact=Показване на термините като списък с връзки. (Automatic Translation)
+portlet-display-template-description-facet-label=Показвайте термините като вграден списък с етикети. (Automatic Translation)
+portlet-display-template-description-facet-radio=Показвайте термини с бутоните за радио. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Показване на иконата за търсене вляво. (Automatic Translation)
+portlet-display-template-description-search-results-card=Показване на резултатите с мрежа от карти. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Показване на резултатите само със заглавието им. (Automatic Translation)
+portlet-display-template-description-search-results-list=Показване на резултатите с тяхното заглавие, потребителско име на създател, вид актив и дата на създаване. (Automatic Translation)
+portlet-display-template-description-sort-compact=Показване на етикета вмъкнат със падащото меню. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
