--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_ca.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Nom del paràmetre de paginació delta
 pagination-start-parameter-name=Nom del paràmetre d'inici de paginació
 parent-query-name=Nom de la consulta pare
 parent-query-name-help=El nom de la consulta tal com s'ha configurat al giny del filtre personalitzat pare, només quan aquest giny té la funció d'aportar una clàusula fill a una consulta Bool. Altrament, s'hauria de deixar en blanc.
+portlet-display-template-description-custom-filter-compact=Visualitza el camp d'entrada en línia amb el botó envia. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Visualitza els termes com una llista en línia d'enllaços amb mides diferents segons la freqüència. (Automatic Translation)
+portlet-display-template-description-facet-compact=Visualitza els termes com una llista d'enllaços. (Automatic Translation)
+portlet-display-template-description-facet-label=Visualitza les condicions com a llista d'etiquetes en línia. (Automatic Translation)
+portlet-display-template-description-facet-radio=Visualitza els termes amb botons d'ràdio. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Mostra la icona de cerca de l'esquerra. (Automatic Translation)
+portlet-display-template-description-search-results-card=Mostra els resultats amb una quadrícula de targetes. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Mostra els resultats amb només el seu títol. (Automatic Translation)
+portlet-display-template-description-search-results-list=Visualitza els resultats amb el seu títol, el nom d'usuari del creador, el tipus d'actiu i la data de creació. (Automatic Translation)
+portlet-display-template-description-sort-compact=Visualitza l'etiqueta en línia amb el menú desplegable. (Automatic Translation)
 portlet-display-template-name-card-layout=Disposició de la targeta
 portlet-display-template-name-cloud-layout=Disposició del núvol
 portlet-display-template-name-compact-layout=Disposició compacta
