--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_cs.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Zobrazí vložené vstupní pole pomocí tlačítka odeslat. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Zobrazit termíny jako vložený seznam odkazů s různou velikostí na základě frekvence. (Automatic Translation)
+portlet-display-template-description-facet-compact=Zobrazit termíny jako seznam odkazů. (Automatic Translation)
+portlet-display-template-description-facet-label=Zobrazit termíny jako vložený seznam štítků. (Automatic Translation)
+portlet-display-template-description-facet-radio=Zobrazení termínů pomocí přepínacích tlačítek. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Zobrazí ikonu hledání vlevo. (Automatic Translation)
+portlet-display-template-description-search-results-card=Zobrazení výsledků s mřížkou karet. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Zobrazí výsledky pouze s jejich názvem. (Automatic Translation)
+portlet-display-template-description-search-results-list=Zobrazí výsledky s názvem, uživatelským jménem autora, typem prostředku a datem vytvoření. (Automatic Translation)
+portlet-display-template-description-sort-compact=Zobrazte vložený popisek s rozevíracím seznamem. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
