--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_el.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Εμφάνιση του ενσωματωμένου πεδίου εισόδου με το κουμπί υποβολής. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Εμφάνιση όρων ως ενσωματωμένη λίστα συνδέσεων με διαφορετικά μεγέθη με βάση τη συχνότητα. (Automatic Translation)
+portlet-display-template-description-facet-compact=Εμφάνιση όρων ως λίστας συνδέσεων. (Automatic Translation)
+portlet-display-template-description-facet-label=Εμφάνιση όρων ως ενσωματωμένης λίστας ετικετών. (Automatic Translation)
+portlet-display-template-description-facet-radio=Εμφάνιση όρων με κουμπιά επιλογής. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Εμφάνιση του εικονιδίου αναζήτησης στα αριστερά. (Automatic Translation)
+portlet-display-template-description-search-results-card=Εμφάνιση αποτελεσμάτων με πλέγμα καρτών. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Εμφάνιση αποτελεσμάτων μόνο με τον τίτλο τους. (Automatic Translation)
+portlet-display-template-description-search-results-list=Εμφανίστε αποτελέσματα με τον τίτλο, το όνομα χρήστη του δημιουργού, τον τύπο στοιχείου και την ημερομηνία δημιουργίας. (Automatic Translation)
+portlet-display-template-description-sort-compact=Εμφάνιση της ετικέτας ενσωματωμένης με την αναπτυσσόμενη λίστα. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
