--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_es.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Nombre de parámetro de paginación delta
 pagination-start-parameter-name=Nombre de parámetro de inicio de paginación
 parent-query-name=Nombre de consulta principal
 parent-query-name-help=El nombre de consulta configurado como el widget de filtro personalizado principal, solo cuando se tenga previsto que el widget contribuya con una cláusula secundaria a una consulta booleana. De lo contrario, debe dejarse en blanco.
+portlet-display-template-description-custom-filter-compact=Muestre el campo de entrada en línea con el botón Enviar. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Mostrar términos como una lista en línea de enlaces con diferentes tamaños en función de la frecuencia. (Automatic Translation)
+portlet-display-template-description-facet-compact=Mostrar términos como una lista de vínculos. (Automatic Translation)
+portlet-display-template-description-facet-label=Mostrar términos como una lista en línea de etiquetas. (Automatic Translation)
+portlet-display-template-description-facet-radio=Mostrar términos con botones de opción. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Muestra el icono de búsqueda a la izquierda. (Automatic Translation)
+portlet-display-template-description-search-results-card=Mostrar los resultados con una cuadrícula de tarjetas. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Mostrar los resultados con solo su título. (Automatic Translation)
+portlet-display-template-description-search-results-list=Muestre los resultados con su título, el nombre de usuario del creador, el tipo de activo y la fecha de creación. (Automatic Translation)
+portlet-display-template-description-sort-compact=Muestre la etiqueta en línea con el menú desplegable. (Automatic Translation)
 portlet-display-template-name-card-layout=Diseño de tarjeta
 portlet-display-template-name-cloud-layout=Diseño de nube
 portlet-display-template-name-compact-layout=Diseño compacto
