--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_et.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Saate kuvada sisendvälja koos edastusnupuga. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Saate kuvada terminid erineva suurusega linkide tekstisisese loendina, mis põhineb sagedusel. (Automatic Translation)
+portlet-display-template-description-facet-compact=Saate kuvada terminid linkide loendina. (Automatic Translation)
+portlet-display-template-description-facet-label=Saate kuvada terminid siltide tekstisisese loendina. (Automatic Translation)
+portlet-display-template-description-facet-radio=Kuva terminid raadionuppudega. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Kuva vasakul otsinguikoon. (Automatic Translation)
+portlet-display-template-description-search-results-card=Saate kuvada tulemused kaartide ruudustikuga. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Saate kuvada ainult nende pealkirjaga tulemused. (Automatic Translation)
+portlet-display-template-description-search-results-list=Saate kuvada tulemused oma pealkirja, looja kasutajanime, vara tüübi ja loomiskuupäevaga. (Automatic Translation)
+portlet-display-template-description-sort-compact=Saate kuvada sildi rippmenüüst. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
