--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_fa.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=نام کوئری والد
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=نمایش درون خطی رشته ورودی با ارسال را فشار دهید. (Automatic Translation)
+portlet-display-template-description-facet-cloud=نمایش شرایط به عنوان یک لیست درون خطی از لینک با اندازه های مختلف بر اساس فرکانس. (Automatic Translation)
+portlet-display-template-description-facet-compact=نمایش شرایط به عنوان یک لیست از لینک. (Automatic Translation)
+portlet-display-template-description-facet-label=نمایش شرایط به عنوان یک لیست درون خطی از برچسب. (Automatic Translation)
+portlet-display-template-description-facet-radio=نمایش شرایط با دکمه های رادیویی. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=نماد جستجو را در سمت چپ نمایش دهید. (Automatic Translation)
+portlet-display-template-description-search-results-card=نمایش نتایج با یک شبکه از کارت. (Automatic Translation)
+portlet-display-template-description-search-results-compact=نمایش نتایج تنها با عنوان خود را. (Automatic Translation)
+portlet-display-template-description-search-results-list=نمایش نتایج با عنوان خود ، نام کاربری خالق ، نوع دارایی ، و تاریخ ایجاد. (Automatic Translation)
+portlet-display-template-description-sort-compact=نمایش برچسب های درون خطی با کرکره. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
