--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_fr.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Nom du paramètre du delta de la pagination
 pagination-start-parameter-name=Nom du paramètre du début de la pagination
 parent-query-name=Nom de la requête parent
 parent-query-name-help=Le nom de la requête comme configuré dans le widget Filtre personnalisé, seulement quand ce widget est doit contribuer une clause enfant à une requête Bool. Doit être laissé vide autrement.
+portlet-display-template-description-custom-filter-compact=Affichez le champ d'entrée en ligne avec le bouton Soumettre. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Afficher les termes comme une liste en ligne de liens de tailles variables en fonction de la fréquence. (Automatic Translation)
+portlet-display-template-description-facet-compact=Afficher les termes comme une liste de liens. (Automatic Translation)
+portlet-display-template-description-facet-label=Afficher les termes comme une liste en ligne d'étiquettes. (Automatic Translation)
+portlet-display-template-description-facet-radio=Afficher les termes avec des boutons radio. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Affichez l'icône de recherche à gauche. (Automatic Translation)
+portlet-display-template-description-search-results-card=Affichez les résultats avec une grille de cartes. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Afficher les résultats avec seulement leur titre. (Automatic Translation)
+portlet-display-template-description-search-results-list=Affichez les résultats avec leur titre, le nom d'utilisateur du créateur, le type d'actif et la date de création. (Automatic Translation)
+portlet-display-template-description-sort-compact=Affichez l'étiquette en ligne avec la liste déroulante. (Automatic Translation)
 portlet-display-template-name-card-layout=Disposition de la carte
 portlet-display-template-name-cloud-layout=Disposition du cloud
 portlet-display-template-name-compact-layout=Disposition compacte
