--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_hi_IN.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=सबमिट बटन के साथ इनपुट फील्ड इनलाइन प्रदर्शित करें। (Automatic Translation)
+portlet-display-template-description-facet-cloud=आवृत्ति के आधार पर अलग-अलग आकारों के साथ लिंक की इनलाइन सूची के रूप में प्रदर्शित शब्द। (Automatic Translation)
+portlet-display-template-description-facet-compact=लिंक की सूची के रूप में प्रदर्शित शब्द। (Automatic Translation)
+portlet-display-template-description-facet-label=लेबल की इनलाइन सूची के रूप में प्रदर्शित शब्द। (Automatic Translation)
+portlet-display-template-description-facet-radio=रेडियो बटन के साथ प्रदर्शन शब्द। (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=बाईं ओर खोज आइकन प्रदर्शित करें। (Automatic Translation)
+portlet-display-template-description-search-results-card=ताश के पत्तों की एक ग्रिड के साथ प्रदर्शन परिणाम। (Automatic Translation)
+portlet-display-template-description-search-results-compact=केवल उनके शीर्षक के साथ परिणाम प्रदर्शित करें। (Automatic Translation)
+portlet-display-template-description-search-results-list=उनके शीर्षक, निर्माता के उपयोगकर्ता नाम, परिसंपत्ति प्रकार और सृजन तिथि के साथ प्रदर्शन परिणाम। (Automatic Translation)
+portlet-display-template-description-sort-compact=ड्रॉपडाउन के साथ लेबल इनलाइन प्रदर्शित करें। (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
