--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_hu.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Oldaltördelés delta paraméternév
 pagination-start-parameter-name=Oldaltördelés kezdete paraméternév
 parent-query-name=Fölérendelt lekérdezés neve
 parent-query-name-help=A fölérendelt Egyéni szűrő widgetnél konfigurált Lekérdezés neve, csak amikor a widget egy Bool lekérdezés alárendelt kifejezése által van hatással a keresésre. Egyébként hagyja üresen.
+portlet-display-template-description-custom-filter-compact=A beviteli mező megjelenítése a küldés gombbal egy vonalban. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Kifejezések megjelenítése a különböző méretű hivatkozások szövegközi listájaként a gyakoriság alapján. (Automatic Translation)
+portlet-display-template-description-facet-compact=Kifejezések megjelenítése hivatkozások listájaként. (Automatic Translation)
+portlet-display-template-description-facet-label=Kifejezések megjelenítése a címkék szövegközi listájaként. (Automatic Translation)
+portlet-display-template-description-facet-radio=Kifejezések megjelenítése választógombokkal. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=A keresés ikonmegjelenítése a bal oldalon. (Automatic Translation)
+portlet-display-template-description-search-results-card=Az eredmények megjelenítése kártyák rácsával. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Az eredmények megjelenítése csak a címükkel. (Automatic Translation)
+portlet-display-template-description-search-results-list=Az eredmények megjelenítése a címmel, a létrehozó felhasználónevével, az eszköztípussal és a létrehozás dátumával. (Automatic Translation)
+portlet-display-template-description-sort-compact=A címke megjelenítése a legördülő menüvel együtt. (Automatic Translation)
 portlet-display-template-name-card-layout=Kártyaelrendezés
 portlet-display-template-name-cloud-layout=Felhő elrendezés
 portlet-display-template-name-compact-layout=Kompakt elrendezés
