--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_in.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Tampilkan Field input inline dengan tombol submit. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Tampilan istilah sebagai inline daftar link dengan berbagai ukuran berdasarkan frekuensi. (Automatic Translation)
+portlet-display-template-description-facet-compact=Tampilan istilah sebagai daftar link. (Automatic Translation)
+portlet-display-template-description-facet-label=Tampilan istilah sebagai daftar inline label. (Automatic Translation)
+portlet-display-template-description-facet-radio=Menampilkan istilah dengan tombol radio. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Menampilkan ikon pencarian di sebelah kiri. (Automatic Translation)
+portlet-display-template-description-search-results-card=Menampilkan hasil dengan grid kartu. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Menampilkan hasil hanya dengan judul mereka. (Automatic Translation)
+portlet-display-template-description-search-results-list=Menampilkan hasil dengan judul, nama pengguna, jenis aset, dan tanggal pembuatan Kreator. (Automatic Translation)
+portlet-display-template-description-sort-compact=Menampilkan label inline dengan dropdown. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
