--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_it.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Visualizzare il campo di input in linea con il pulsante di invio. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Visualizza i termini come un elenco in linea di collegamenti con dimensioni variabili in base alla frequenza. (Automatic Translation)
+portlet-display-template-description-facet-compact=Visualizzare i termini come un elenco di collegamenti. (Automatic Translation)
+portlet-display-template-description-facet-label=Visualizzare i termini come elenco in linea di etichette. (Automatic Translation)
+portlet-display-template-description-facet-radio=Visualizzare i termini con i pulsanti di opzione. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Visualizzare l'icona di ricerca a sinistra. (Automatic Translation)
+portlet-display-template-description-search-results-card=Visualizza i risultati con una griglia di carte. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Visualizzare i risultati solo con il titolo. (Automatic Translation)
+portlet-display-template-description-search-results-list=Visualizza i risultati con il titolo, il nome utente del creatore, il tipo di risorsa e la data di creazione. (Automatic Translation)
+portlet-display-template-description-sort-compact=Visualizzare l'etichetta in linea con l'elenco a discesa. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
