--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_iw.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=שם פרמטר דלתא עימוד
 pagination-start-parameter-name=שם פרמטר התחלת עימוד
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=הצגת שדה הקלט בתוך השורה עם לחצן submit. (Automatic Translation)
+portlet-display-template-description-facet-cloud=הצגת מונחים כרשימה מוטבעת של קישורים בגדלים שונים המבוססים על תדירות. (Automatic Translation)
+portlet-display-template-description-facet-compact=הצגת מונחים כרשימת קישורים. (Automatic Translation)
+portlet-display-template-description-facet-label=הצגת מונחים כרשימה מוטבעת של תוויות. (Automatic Translation)
+portlet-display-template-description-facet-radio=הצגת מונחים עם לחצני אפשרויות. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=הצג את סמל החיפוש משמאל. (Automatic Translation)
+portlet-display-template-description-search-results-card=הצג תוצאות באמצעות רשת של קלפים. (Automatic Translation)
+portlet-display-template-description-search-results-compact=הצג תוצאות עם הכותרת שלהם בלבד. (Automatic Translation)
+portlet-display-template-description-search-results-list=הצג תוצאות עם הכותרת שלהם, שם המשתמש של היוצר, סוג הנכס ותאריך היצירה. (Automatic Translation)
+portlet-display-template-description-sort-compact=הצג את התווית בתוך השורה עם הרשימה הנפתחת. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
