--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_ko.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=제출 버튼과 입력 필드를 인라인으로 표시합니다. (Automatic Translation)
+portlet-display-template-description-facet-cloud=용어를 빈도에 따라 다양한 크기의 링크인라인 목록으로 표시합니다. (Automatic Translation)
+portlet-display-template-description-facet-compact=용어를 링크 목록으로 표시합니다. (Automatic Translation)
+portlet-display-template-description-facet-label=용어를 레이블의 인라인 목록으로 표시합니다. (Automatic Translation)
+portlet-display-template-description-facet-radio=라디오 버튼으로 용어를 표시합니다. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=왼쪽에 검색 아이콘을 표시합니다. (Automatic Translation)
+portlet-display-template-description-search-results-card=카드 그리드로 결과를 표시합니다. (Automatic Translation)
+portlet-display-template-description-search-results-compact=제목만으로 결과를 표시합니다. (Automatic Translation)
+portlet-display-template-description-search-results-list=제목, 크리에이터의 사용자 이름, 자산 유형 및 생성 날짜로 결과를 표시합니다. (Automatic Translation)
+portlet-display-template-description-sort-compact=레이블을 드롭다운과 함께 인라인으로 표시합니다. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=클라우드 레이아웃
 portlet-display-template-name-compact-layout=Compact Layout
