--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_lt.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Rodyti įvesties lauką kartu su pateikimo mygtuku. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Rodyti terminus kaip įdėtą saitų, kurių dydis pagal dažnumą yra įvairaus dydžio, sąrašą. (Automatic Translation)
+portlet-display-template-description-facet-compact=Rodyti terminus kaip saitų sąrašą. (Automatic Translation)
+portlet-display-template-description-facet-label=Rodyti terminus kaip įdėtųjų etikečių sąrašą. (Automatic Translation)
+portlet-display-template-description-facet-radio=Rodyti terminus su išrinkimo mygtukais. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Kairėje rodyti ieškos piktogramą. (Automatic Translation)
+portlet-display-template-description-search-results-card=Rodyti rezultatus su kortelių tinkleliu. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Rodyti rezultatus tik su jų pavadinimu. (Automatic Translation)
+portlet-display-template-description-search-results-list=Rodyti rezultatus su jų pavadinimu, kūrėjo vartotojo vardu, turto tipu ir sukūrimo data. (Automatic Translation)
+portlet-display-template-description-sort-compact=Rodyti etiketę eilutėje su išplečiamuoju sąrašu. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
