--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_pl.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Wyświetl pole wejściowe w linii za pomocą przycisku Prześlij. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Wyświetlanie terminów jako wbudowanej listy łączy o różnych rozmiarach na podstawie częstotliwości. (Automatic Translation)
+portlet-display-template-description-facet-compact=Wyświetlanie terminów jako listy łączy. (Automatic Translation)
+portlet-display-template-description-facet-label=Wyświetlanie terminów jako wbudowanej listy etykiet. (Automatic Translation)
+portlet-display-template-description-facet-radio=Wyświetlanie terminów za pomocą przycisków radiowych. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Wyświetl ikonę wyszukiwania po lewej stronie. (Automatic Translation)
+portlet-display-template-description-search-results-card=Wyświetlanie wyników z siatką kart. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Wyświetl wyniki tylko z ich tytułem. (Automatic Translation)
+portlet-display-template-description-search-results-list=Wyświetl wyniki z tytułem, nazwą użytkownika twórcy, typem zasobu i datą utworzenia. (Automatic Translation)
+portlet-display-template-description-sort-compact=Wyświetl etykietę w linii z listy rozwijanej. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
