--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_pt_BR.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Nome do parâmetro desta da paginação
 pagination-start-parameter-name=Nome do parâmetro de início do paradigma
 parent-query-name=Nome de consulta pai
 parent-query-name-help=O nome da consulta, deve ser configurado como no widget do filtro personalizado pai, apenas quando este widget for destinado a contribuir com uma cláusula filho para uma consulta Bool. Deve ser deixado em branco, caso contrário.
+portlet-display-template-description-custom-filter-compact=Exibir a linha do campo de entrada com o botão enviar. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Exibir termos como uma lista inline de links com tamanhos variados com base na frequência. (Automatic Translation)
+portlet-display-template-description-facet-compact=Exibir termos como uma lista de links. (Automatic Translation)
+portlet-display-template-description-facet-label=Exibir termos como uma lista inline de rótulos. (Automatic Translation)
+portlet-display-template-description-facet-radio=Exibir termos com botões de rádio. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Exibir o ícone de pesquisa à esquerda. (Automatic Translation)
+portlet-display-template-description-search-results-card=Exibir resultados com uma grade de cartões. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Exibir resultados apenas com seu título. (Automatic Translation)
+portlet-display-template-description-search-results-list=Exibir resultados com seu título, nome de usuário do criador, tipo de ativo e data de criação. (Automatic Translation)
+portlet-display-template-description-sort-compact=Exibir a etiqueta em linha com o dropdown. (Automatic Translation)
 portlet-display-template-name-card-layout=Layout do Cartão
 portlet-display-template-name-cloud-layout=Layout de nuvem
 portlet-display-template-name-compact-layout=Layout Compacto
