--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_pt_PT.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Exibir a linha do campo de entrada com o botão enviar. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Exibir termos como uma lista inline de links com tamanhos variados com base na frequência. (Automatic Translation)
+portlet-display-template-description-facet-compact=Exibir termos como uma lista de links. (Automatic Translation)
+portlet-display-template-description-facet-label=Exibir termos como uma lista inline de rótulos. (Automatic Translation)
+portlet-display-template-description-facet-radio=Exibir termos com botões de rádio. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Exibir o ícone de pesquisa à esquerda. (Automatic Translation)
+portlet-display-template-description-search-results-card=Exibir resultados com uma grade de cartões. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Exibir resultados apenas com seu título. (Automatic Translation)
+portlet-display-template-description-search-results-list=Exibir resultados com seu título, nome de usuário do criador, tipo de ativo e data de criação. (Automatic Translation)
+portlet-display-template-description-sort-compact=Exibir a etiqueta em linha com o dropdown. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
