--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_ro.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Afișați câmpul de intrare în linie cu butonul de remitere. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Afișați termenii ca o listă în linie de linkuri cu dimensiuni diferite în funcție de frecvență. (Automatic Translation)
+portlet-display-template-description-facet-compact=Afișați termenii ca listă de linkuri. (Automatic Translation)
+portlet-display-template-description-facet-label=Afișați termenii ca o listă în linie de etichete. (Automatic Translation)
+portlet-display-template-description-facet-radio=Afișați termenii cu butoane radio. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Afișați pictograma de căutare din stânga. (Automatic Translation)
+portlet-display-template-description-search-results-card=Afișați rezultatele cu o grilă de carduri. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Afișați rezultatele numai cu titlul lor. (Automatic Translation)
+portlet-display-template-description-search-results-list=Afișați rezultatele cu titlul, numele de utilizator al creatorului, tipul de activ și data creării. (Automatic Translation)
+portlet-display-template-description-sort-compact=Afișați eticheta în linie cu lista verticală. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
