--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_ru.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Отображение входного поля в линии с кнопкой отправки. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Отображение терминов в качестве встроенных ссылок с различными размерами в зависимости от частоты. (Automatic Translation)
+portlet-display-template-description-facet-compact=Отображение терминов в списке ссылок. (Automatic Translation)
+portlet-display-template-description-facet-label=Отображение терминов в качестве встроенных меток. (Automatic Translation)
+portlet-display-template-description-facet-radio=Отображение терминов с радиоканалами. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Отображение значка поиска слева. (Automatic Translation)
+portlet-display-template-description-search-results-card=Отображение результатов с сеткой карт. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Отображение результатов только с их названием. (Automatic Translation)
+portlet-display-template-description-search-results-list=Отображение результатов с их заголовком, именем пользователя создателя, типом актива и датой создания. (Automatic Translation)
+portlet-display-template-description-sort-compact=Отображение метки встроенный с падением. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
