--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_sk.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Zobrazenie vstupného poľa v norme s tlačidlom Odoslať. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Zobraziť výrazy ako vnorený zoznam prepojení s rôznou veľkosťou na základe frekvencie. (Automatic Translation)
+portlet-display-template-description-facet-compact=Zobraziť výrazy ako zoznam prepojení. (Automatic Translation)
+portlet-display-template-description-facet-label=Zobrazí výrazy ako vnorený zoznam menoviek. (Automatic Translation)
+portlet-display-template-description-facet-radio=Zobrazenie výrazov pomocou prepínačov. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Zobrazí ikonu vyhľadávania vľavo. (Automatic Translation)
+portlet-display-template-description-search-results-card=Zobrazenie výsledkov s mriežkou kariet. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Zobraziť výsledky len s ich názvom. (Automatic Translation)
+portlet-display-template-description-search-results-list=Zobrazte výsledky s ich názvom, menom používateľa tvorcu, typom majetku a dátumom vytvorenia. (Automatic Translation)
+portlet-display-template-description-sort-compact=Zobrazí označenie v norme s rozbaľovacím zoznamom. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
