--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_sl.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Prikažite vnosno polje v vrstici z gumbom za pošiljanje. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Prikažite izraze kot inline seznam povezav z različnimi velikostmi glede na frekvenco. (Automatic Translation)
+portlet-display-template-description-facet-compact=Prikažite izraze kot seznam povezav. (Automatic Translation)
+portlet-display-template-description-facet-label=Prikažite izraze kot vrstični seznam oznak. (Automatic Translation)
+portlet-display-template-description-facet-radio=Prikažite izraze z radijskimi gumbi. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Prikažite ikono za iskanje na levi strani. (Automatic Translation)
+portlet-display-template-description-search-results-card=Prikažite rezultate z mrežo kart. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Prikažite rezultate samo z njihovim nazivom. (Automatic Translation)
+portlet-display-template-description-search-results-list=Prikažite rezultate z naslovom, uporabniškim imenom ustvarjalca, vrsto sredstev in datumom ustvarjanja. (Automatic Translation)
+portlet-display-template-description-sort-compact=Prikažite oznako v vrstici s spustom. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
