--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_th.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=แสดงฟิลด์อินพุตแบบอินไลน์ด้วยปุ่มส่ง (Automatic Translation)
+portlet-display-template-description-facet-cloud=แสดงคําเป็นรายการแบบอินไลน์ของลิงก์ที่มีขนาดที่แตกต่างกันตามความถี่ (Automatic Translation)
+portlet-display-template-description-facet-compact=แสดงคําเป็นรายการของการเชื่อมโยง (Automatic Translation)
+portlet-display-template-description-facet-label=แสดงคําเป็นรายการแบบอินไลน์ของป้ายชื่อ (Automatic Translation)
+portlet-display-template-description-facet-radio=แสดงคําศัพท์ที่มีปุ่มตัวเลือก (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=แสดงไอคอนค้นหาทางด้านซ้าย (Automatic Translation)
+portlet-display-template-description-search-results-card=แสดงผลลัพธ์ด้วยตารางของการ์ด (Automatic Translation)
+portlet-display-template-description-search-results-compact=แสดงผลลัพธ์ที่มีเฉพาะชื่อเรื่องเท่านั้น (Automatic Translation)
+portlet-display-template-description-search-results-list=แสดงผลลัพธ์ด้วยชื่อ ชื่อผู้ใช้ ของผู้สร้าง ประเภทเนื้อหา และวันที่สร้าง (Automatic Translation)
+portlet-display-template-description-sort-compact=แสดงป้ายชื่อแบบอินไลน์ด้วยรายการแบบหล่นลง (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
