--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_tr.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Giriş alanı satırSatırını gönder düğmesiyle görüntüleyin. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Terimleri sıklıya göre değişen boyutlarda ki bağlantıların sıralı listesi olarak görüntüleyin. (Automatic Translation)
+portlet-display-template-description-facet-compact=Terimleri bağlantı listesi olarak görüntüleyin. (Automatic Translation)
+portlet-display-template-description-facet-label=Terimleri satır satırlı etiketler listesi olarak görüntüleyin. (Automatic Translation)
+portlet-display-template-description-facet-radio=Terimleri radyo düğmeleriyle görüntüleyin. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Soldaki arama simgesini görüntüleyin. (Automatic Translation)
+portlet-display-template-description-search-results-card=Sonuçları bir kart ızgarasıyla görüntüleyin. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Sonuçları yalnızca başlığıyla görüntüleyin. (Automatic Translation)
+portlet-display-template-description-search-results-list=Sonuçları başlıklarıyla, oluşturucuların kullanıcı adıyla, varlık türüyle ve oluşturma tarihiyle görüntüleyin. (Automatic Translation)
+portlet-display-template-description-sort-compact=Etiketi açılır düşüşle birlikte satır içinde görüntüleyin. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
