--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_uk.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Відобразіть поле введення в тексті за допомогою кнопки надіслати. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Відображення термінів як вбудованого списку посилань з різними розмірами на основі частоти. (Automatic Translation)
+portlet-display-template-description-facet-compact=Відображення термінів у вигляді списку посилань. (Automatic Translation)
+portlet-display-template-description-facet-label=Відображення термінів як вбудованого списку міток. (Automatic Translation)
+portlet-display-template-description-facet-radio=Відображення умов за допомогою перемикачів. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Відобразіть піктограму пошуку ліворуч. (Automatic Translation)
+portlet-display-template-description-search-results-card=Відображення результатів за допомогою сітки карт. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Відображати результати лише з їх заголовком. (Automatic Translation)
+portlet-display-template-description-search-results-list=Відображати результати з їх заголовком, іменем користувача, типом активу та датою створення. (Automatic Translation)
+portlet-display-template-description-sort-compact=Відображення підпису в тексті з розкривного списку. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
