--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_vi.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Hiển thị trường nhập nội tuyến bằng nút Submit. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Hiển thị các điều khoản như một danh sách nội tuyến của các liên kết với kích thước khác nhau dựa trên tần số. (Automatic Translation)
+portlet-display-template-description-facet-compact=Hiển thị các điều khoản như là một danh sách các liên kết. (Automatic Translation)
+portlet-display-template-description-facet-label=Hiển thị các điều khoản như một danh sách nội tuyến của nhãn. (Automatic Translation)
+portlet-display-template-description-facet-radio=Hiển thị các điều khoản với các nút radio. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Hiển thị biểu tượng tìm kiếm ở bên trái. (Automatic Translation)
+portlet-display-template-description-search-results-card=Hiển thị kết quả với một mạng lưới các thẻ. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Hiển thị kết quả chỉ với tiêu đề của họ. (Automatic Translation)
+portlet-display-template-description-search-results-list=Hiển thị kết quả với tiêu đề, tên người dùng, loại nội dung và ngày tạo của họ. (Automatic Translation)
+portlet-display-template-description-sort-compact=Hiển thị nhãn nội tuyến với trình đơn thả xuống. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
