--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_zh_CN.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=分页Delta参数名称
 pagination-start-parameter-name=分页起始参数名称
 parent-query-name=父级查询名称
 parent-query-name-help=仅当此微件旨在将子级子句贡献给布尔查询时，才会在父级自定义筛选器微件中配置的查询名称。否则应留空。
+portlet-display-template-description-custom-filter-compact=使用提交按钮内联显示输入字段。 (Automatic Translation)
+portlet-display-template-description-facet-cloud=将术语显示为基于频率具有不同大小的链接的内联列表。 (Automatic Translation)
+portlet-display-template-description-facet-compact=将术语显示为链接列表。 (Automatic Translation)
+portlet-display-template-description-facet-label=将术语显示为标签的内联列表。 (Automatic Translation)
+portlet-display-template-description-facet-radio=使用单选按钮显示术语。 (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=在左侧显示搜索图标。 (Automatic Translation)
+portlet-display-template-description-search-results-card=使用卡片网格显示结果。 (Automatic Translation)
+portlet-display-template-description-search-results-compact=仅显示其标题的结果。 (Automatic Translation)
+portlet-display-template-description-search-results-list=显示结果及其标题、创建者的用户名、资产类型和创建日期。 (Automatic Translation)
+portlet-display-template-description-sort-compact=将标签与下拉列表内联显示。 (Automatic Translation)
 portlet-display-template-name-card-layout=卡片布局
 portlet-display-template-name-cloud-layout=云布局
 portlet-display-template-name-compact-layout=紧凑布局
