--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_zh_TW.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=使用提交按鈕內聯顯示輸入欄位。 (Automatic Translation)
+portlet-display-template-description-facet-cloud=將術語顯示為基於頻率具有不同大小的連結的內聯清單。 (Automatic Translation)
+portlet-display-template-description-facet-compact=將術語顯示為連結清單。 (Automatic Translation)
+portlet-display-template-description-facet-label=將術語顯示為標籤的內聯清單。 (Automatic Translation)
+portlet-display-template-description-facet-radio=使用單選按鈕顯示術語。 (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=在左側顯示搜索圖示。 (Automatic Translation)
+portlet-display-template-description-search-results-card=使用卡片網格顯示結果。 (Automatic Translation)
+portlet-display-template-description-search-results-compact=僅顯示其標題的結果。 (Automatic Translation)
+portlet-display-template-description-search-results-list=顯示包含其標題、創建者的使用者名、資產類型和創建日期的結果。 (Automatic Translation)
+portlet-display-template-description-sort-compact=將標籤與下拉列表內聯顯示。 (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
