--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_de.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Name Paginierungs-Delta-Parameter
 pagination-start-parameter-name=Name Paginierungs-Start-Parameter
 parent-query-name=Name der übergeordneten Abfrage
 parent-query-name-help=Der Abfragename, wie er im übergeordneten benutzerdefinierten Filter-Widget konfiguriert ist, nur wenn dieses Widget dazu bestimmt ist, eine Child-Klausel zu einer Bool-Abfrage beizutragen. Sollte andernfalls leer bleiben.
+portlet-display-template-description-custom-filter-compact=Display the input field inline with the submit button. (Automatic Copy)
+portlet-display-template-description-facet-cloud=Display terms as an inline list of links with varying sizes based on frequency. (Automatic Copy)
+portlet-display-template-description-facet-compact=Display terms as a list of links. (Automatic Copy)
+portlet-display-template-description-facet-label=Display terms as an inline list of labels. (Automatic Copy)
+portlet-display-template-description-facet-radio=Display terms with radio buttons. (Automatic Copy)
+portlet-display-template-description-left-aligned-icon=Display the search icon on the left. (Automatic Copy)
+portlet-display-template-description-search-results-card=Display results with a grid of cards. (Automatic Copy)
+portlet-display-template-description-search-results-compact=Display results with only their title. (Automatic Copy)
+portlet-display-template-description-search-results-list=Display results with their title, creator's user name, asset type, and creation date. (Automatic Copy)
+portlet-display-template-description-sort-compact=Display the label inline with the dropdown. (Automatic Copy)
 portlet-display-template-name-card-layout=Kartenlayout
 portlet-display-template-name-cloud-layout=Cloudlayout
 portlet-display-template-name-compact-layout=Kompaktes Layout
