--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_ja.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=ページ差分パラメータ名
 pagination-start-parameter-name=ページネーション開始パラメータ名
 parent-query-name=親クエリ名
 parent-query-name-help=このウィジェットがBoolクエリに子条件を提供することを目的としている場合にのみ、親のカスタムフィルタウィジェットで設定されるクエリ名です。それ以外の場合は空白のままにしてください。
+portlet-display-template-description-custom-filter-compact=Display the input field inline with the submit button. (Automatic Copy)
+portlet-display-template-description-facet-cloud=Display terms as an inline list of links with varying sizes based on frequency. (Automatic Copy)
+portlet-display-template-description-facet-compact=Display terms as a list of links. (Automatic Copy)
+portlet-display-template-description-facet-label=Display terms as an inline list of labels. (Automatic Copy)
+portlet-display-template-description-facet-radio=Display terms with radio buttons. (Automatic Copy)
+portlet-display-template-description-left-aligned-icon=Display the search icon on the left. (Automatic Copy)
+portlet-display-template-description-search-results-card=Display results with a grid of cards. (Automatic Copy)
+portlet-display-template-description-search-results-compact=Display results with only their title. (Automatic Copy)
+portlet-display-template-description-search-results-list=Display results with their title, creator's user name, asset type, and creation date. (Automatic Copy)
+portlet-display-template-description-sort-compact=Display the label inline with the dropdown. (Automatic Copy)
 portlet-display-template-name-card-layout=カードレイアウト
 portlet-display-template-name-cloud-layout=クラウドのレイアウト
 portlet-display-template-name-compact-layout=コンパクトレイアウト
