--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_nb.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Pagination Delta Parameter Name
 pagination-start-parameter-name=Pagination Start Parameter Name
 parent-query-name=Parent Query Name
 parent-query-name-help=When contributing a child clause to a Bool query, set this to match the Query Name configured in the parent Custom Filter widget. Otherwise, leave it blank.
+portlet-display-template-description-custom-filter-compact=Vis inndatafeltet innebygd med send-knappen. (Automatic Translation)
+portlet-display-template-description-facet-cloud=Vis termer som en innebygd liste over koblinger med varierende størrelser basert på frekvens. (Automatic Translation)
+portlet-display-template-description-facet-compact=Vis termer som en liste over koblinger. (Automatic Translation)
+portlet-display-template-description-facet-label=Vis termer som en innebygd liste over etiketter. (Automatic Translation)
+portlet-display-template-description-facet-radio=Vis termer med alternativknapper. (Automatic Translation)
+portlet-display-template-description-left-aligned-icon=Vis søkeikonet til venstre. (Automatic Translation)
+portlet-display-template-description-search-results-card=Vis resultater med et rutenett med kort. (Automatic Translation)
+portlet-display-template-description-search-results-compact=Vis resultater med bare tittelen. (Automatic Translation)
+portlet-display-template-description-search-results-list=Vis resultater med tittelen, skaperens brukernavn, innholdselementtype og opprettelsesdato. (Automatic Translation)
+portlet-display-template-description-sort-compact=Vis etiketten innebygd med rullegardinmenyen. (Automatic Translation)
 portlet-display-template-name-card-layout=Card Layout
 portlet-display-template-name-cloud-layout=Cloud Layout
 portlet-display-template-name-compact-layout=Compact Layout
