--- a/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-search/portal-search-web/src/main/resources/content/Language_sv.properties
@@ -139,6 +139,16 @@ pagination-delta-parameter-name=Parameternamn för sidnumreringsdelta
 pagination-start-parameter-name=Parameternamn för sidnumreringsstart
 parent-query-name=Namn på överordnad fråga
 parent-query-name-help=Frågenamnet som det konfigurerats i överordnad widget för anpassat filter, endast när denna widget avses att bidra med en underordnad klausul till en boolesk fråga. Bör annars lämnas tom.
+portlet-display-template-description-custom-filter-compact=Display the input field inline with the submit button. (Automatic Copy)
+portlet-display-template-description-facet-cloud=Display terms as an inline list of links with varying sizes based on frequency. (Automatic Copy)
+portlet-display-template-description-facet-compact=Display terms as a list of links. (Automatic Copy)
+portlet-display-template-description-facet-label=Display terms as an inline list of labels. (Automatic Copy)
+portlet-display-template-description-facet-radio=Display terms with radio buttons. (Automatic Copy)
+portlet-display-template-description-left-aligned-icon=Display the search icon on the left. (Automatic Copy)
+portlet-display-template-description-search-results-card=Display results with a grid of cards. (Automatic Copy)
+portlet-display-template-description-search-results-compact=Display results with only their title. (Automatic Copy)
+portlet-display-template-description-search-results-list=Display results with their title, creator's user name, asset type, and creation date. (Automatic Copy)
+portlet-display-template-description-sort-compact=Display the label inline with the dropdown. (Automatic Copy)
 portlet-display-template-name-card-layout=Kortlayout
 portlet-display-template-name-cloud-layout=Cloud-layout
 portlet-display-template-name-compact-layout=Kompakt layout
